--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.25.2",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.13.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.12"
   }
 }
